# py-deferrer

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
deferrer/: __core__.py  __init__.py  __public__.py  __test__.py  _defer.py  _defer_scope.py  _deferred_actions.py  _frame.py  _mixed.py  _mixed_test.py  _opcode.py  _sequence_matching.py  _sugarful.py  _sugarful_test.py  _sugarless.py  _sugarless_test.py
deferrer/_common/: __init__.py  _caller_frame.py  _code_location.py  _deferred_calls.py  _opcode.py
deferrer/_core/: __init__.py  _defer.py  _defer_scope.py  _deferred_actions.py
deferrer/_core/_defer/: _mixed.py  _sugarful.py  _sugarless.py
deferrer/_defer/: __init__.py  _mixed.py  _sugarful.py  _sugarful_test.py  _sugarful_test__used_in_global_scope.py  _sugarless.py  _sugarless_test.py  _sugarless_test__used_in_global_scope.py
deferrer/_samples/: defer_in_global_scope__sugarful.py  defer_in_global_scope__sugarless.py
deferrer/_scope/: _context.py  _context_test.py  _core.py  _core_test.py  _iterable.py  _iterable_test.py
deferrer/_support/: __init__.py  _caller_frame.py  _deferred_calls.py  _frame.py  _opcode.py
deferrer/_utils/: __init__.py  _code_location.py  _frame.py  _opcode.py  _sequence_matching.py
deferrer_tests/: defer.py  defer_scope.py
deferrer_tests/samples/: sugarful_with_defer_scope.py  sugarful_without_defer_scope.py  sugarless_with_defer_scope.py  sugarless_without_defer_scope.py
unimportable/: _sugarful_test__defer_in_global_scope.py  _sugarless_test__defer_in_global_scope.py
